--- a/PiscisOutOffice/app/src/main/res/layout/activity_menu_autenticacion.xml
+++ b/PiscisOutOffice/app/src/main/res/layout/activity_menu_autenticacion.xml
@@ -19,7 +19,7 @@
         tools:ignore="ImageContrastCheck" />
 
     <TextView
-        android:id="@+id/tv_area_comerciales"
+        android:id="@+id/tv_iniciar_sesion"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
@@ -50,7 +50,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_area_comerciales" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_iniciar_sesion" />
 
     <EditText
         android:id="@+id/et_password"
